Kitaplar için frontend hazırlanıyor

--- a/IKitaplik.BlazorUI/Components/Layout/NavMenu.razor
+++ b/IKitaplik.BlazorUI/Components/Layout/NavMenu.razor
@@ -8,11 +8,11 @@
                 Anasayfa
             </MudNavLink>
             <MudNavGroup Title="Kitaplar" Icon="@Icons.Material.Filled.Book">
-                <MudNavLink Href="/books/add">
+                <MudNavLink Href="/book/add">
                     <MudIcon Icon="@Icons.Material.Filled.Add" />
                     Kitap Ekle
                 </MudNavLink>
-                <MudNavLink Href="/books/list">
+                <MudNavLink Href="/book/list">
                     <MudIcon Icon="@Icons.Material.Filled.List" />
                     Kitap Listele
                 </MudNavLink>
@@ -40,11 +40,11 @@
             <MudNavGroup Title="Öğrenciler" Icon="@Icons.Material.Filled.School">
                 <MudNavLink Href="/student/add">
                     <MudIcon Icon="@Icons.Material.Filled.Add" />
-                    Yazar Ekle
+                    Öğrenci Ekle
                 </MudNavLink>
                 <MudNavLink Href="/student/list">
                     <MudIcon Icon="@Icons.Material.Filled.List" />
-                    Yazar Listele
+                    Öğrenci Listele
                 </MudNavLink>
             </MudNavGroup>
         </Authorized>
