Emanet ekleme yapıldı

--- a/IKitaplik.BlazorUI/Components/Components/MessageBoxComponent.razor
+++ b/IKitaplik.BlazorUI/Components/Components/MessageBoxComponent.razor
@@ -1,6 +1,4 @@
-﻿@inject IDialogService DialogService
-
-<MudDialog>
+﻿<MudDialog>
     <DialogContent>
         <MudText Typo="Typo.h6">@Title</MudText>
         <MudText Class="mt-2">@Content</MudText>
