--- a/IKitaplik.BlazorUI/Components/App.razor
+++ b/IKitaplik.BlazorUI/Components/App.razor
@@ -12,11 +12,11 @@
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet  @rendermode="new InteractiveServerRenderMode(prerender: false)"/>
 </head>
 
 <body>
-    <Routes @rendermode="InteractiveServer" />
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
     <script src="_framework/blazor.web.js"></script>
     <script src="/Helper.js"></script>
     <script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
