--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -27,4 +27,4 @@
 @using IKitaplik.Entities.DTOs.WriterDTOs
 @using IKitaplik.BlazorUI.Helpers
 @using IKitaplik.Entities.DTOs
-
+@using IKitaplik.BlazorUI.Components.Components.Deposit
