--- a/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositList.razor
@@ -118,6 +118,6 @@ else
     }
     private async Task DepositUpdate(int id)
     {
-        Nav.NavigateTo("deposit/update/" + id);
+        Nav.NavigateTo("/deposit/operations/" + id);
     }
 }
