--- a/IKitaplik.BlazorUI/Components/Pages/Books/BookList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Books/BookList.razor
@@ -1,6 +1,8 @@
 ﻿@page "/book/list"
+@using IKitaplik.BlazorUI.Components.Components.Book
 @inject NavigationManager Nav
 @inject IBookService _service
+@inject IDonationService _donationService
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 @inject MessageBoxService MessageBoxService
@@ -43,6 +45,7 @@ else
             <MudTd>
                 <MudButtonGroup>
                     <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => BookUpdate(context.Id))" Color="Color.Warning" Icon="@Icons.Material.Filled.Update"></MudIconButton>
+                    <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => BookAddPiece(context.Id))" Color="Color.Info" Icon="@Icons.Material.Filled.Add"></MudIconButton>
                     <MudIconButton ButtonType="ButtonType.Button" OnClick=" (() => BookDelete(context.Id))" Color="Color.Error" Icon="@Icons.Material.Filled.Delete"></MudIconButton>
                 </MudButtonGroup>
             </MudTd>
@@ -117,8 +120,54 @@ else
             StateHasChanged();
         }
     }
-    private async Task BookUpdate(int id)
+    private void BookUpdate(int id)
     {
         Nav.NavigateTo("book/update/" + id);
+    }
+    private async Task BookAddPiece(int id)
+    {
+        DialogOptions dialogOptions = new()
+        {
+            BackdropClick = false,
+            CloseButton = true,
+            FullWidth = true,
+            MaxWidth = MaxWidth.Medium,
+            CloseOnEscapeKey = true,
+        };
+        var dRes = await DialogService.ShowAsync<_BookAddPiece>("Kitap Ekle", dialogOptions);
+        var data = await dRes.Result;
+        DonationAddDto? addDto = (DonationAddDto?)data?.Data;
+        if (addDto is not null)
+        {
+            BookAddPieceDto addedDto = new BookAddPieceDto
+            {
+                Id = id,
+                BeAdded = 1
+            };
+            var res = await _service.BookAddPieceAsync(addedDto);
+            if (res.Success)
+            {
+                if (addDto.StudentId > 0)
+                {
+                    addDto.BookId = id;
+                    var response = await _donationService.AddAsync(addDto);
+                    if (response.Success)
+                    {
+                        Snackbar.Add(response.Message, Severity.Success);
+                    }
+                    else
+                    {
+                        Snackbar.Add(response.Message, Severity.Error);
+                    }
+                }
+                else
+                    Snackbar.Add(res.Message, Severity.Success);
+            }
+            else
+            {
+                Snackbar.Add(res.Message, Severity.Error);
+            }
+            await OnInitializedAsync();
+        }
     }
 }
