--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -28,3 +28,5 @@
 @using IKitaplik.BlazorUI.Helpers
 @using IKitaplik.Entities.DTOs
 @using IKitaplik.BlazorUI.Components.Components.Deposit
+@using Microsoft.AspNetCore.Authorization
+
