--- a/IKitaplik.BlazorUI/Components/App.razor
+++ b/IKitaplik.BlazorUI/Components/App.razor
@@ -12,13 +12,13 @@
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet  @rendermode="new InteractiveServerRenderMode(prerender: false)"/>
+    <HeadOutlet  @rendermode="new InteractiveServerRenderMode()"/>
 </head>
 
 <body>
-    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <Routes @rendermode="new InteractiveServerRenderMode()" />
     <script src="_framework/blazor.web.js"></script>
-    <script src="/Helper.js"></script>
+    <script src="/js/cookie.js"></script>
     <script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
 </body>
 
