--- a/IKitaplik.BlazorUI/Components/Pages/Books/BookUpdate.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Books/BookUpdate.razor
@@ -4,6 +4,7 @@
 @inject IWriterService _writerService
 @inject ISnackbar Snackbar
 @inject NavigationManager Nav
+@attribute [Authorize]
 
 
 <h3 class="mt-2">Kitap Ekle</h3>
