--- a/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryList.razor
@@ -4,6 +4,7 @@
 @inject IDialogService DialogService
 @inject NavigationManager Nav
 @inject MessageBoxService MessageBoxService
+@attribute [Authorize]
 
 
 <MudItem Class="mt-2 mb-2 text-end">
