--- a/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryUpdate.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryUpdate.razor
@@ -2,6 +2,7 @@
 @inject ICategoryService _service
 @inject NavigationManager Nav
 @inject ISnackbar Snackbar
+@attribute [Authorize]
 
 
 <h3 class="mt-2">Kategori Güncelle</h3>
