--- a/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositAdd.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositAdd.razor
@@ -4,6 +4,7 @@
 @inject IDepositService _service
 @inject ISnackbar Snackbar
 @inject NavigationManager Nav
+@attribute [Authorize]
 
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="my-4">
