--- a/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositUpdate.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositUpdate.razor
@@ -4,6 +4,7 @@
 @inject MessageBoxService _messageBoxService
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
+@attribute [Authorize]
 
 
 @if (!string.IsNullOrEmpty(_errorMessage))
