--- a/IKitaplik.BlazorUI/Components/Pages/Students/StudentAdd.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Students/StudentAdd.razor
@@ -2,6 +2,7 @@
 @inject IStudentService _service
 @inject ISnackbar Snackbar
 @inject NavigationManager Nav
+@attribute [Authorize]
 
 
 <h3 class="mt-2">Öğrenci Ekle</h3>
