--- a/IKitaplik.BlazorUI/Components/Pages/Students/StudentList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Students/StudentList.razor
@@ -4,6 +4,7 @@
 @inject IDialogService DialogService
 @inject MessageBoxService MessageBoxService
 @inject NavigationManager Nav
+@attribute [Authorize]
 
 
 <MudItem Class="mt-2 mb-2 text-end">
