--- a/IKitaplik.BlazorUI/Components/Pages/Writers/WriterAdd.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Writers/WriterAdd.razor
@@ -2,6 +2,7 @@
 @inject IWriterService _service
 @inject ISnackbar Snackbar
 @inject NavigationManager Nav
+@attribute [Authorize]
 
 
 <h3 class="mt-2">Yazar Ekle</h3>
